@@ -1,4 +1,8 @@
-2010-08-19  Asa Ayers  <Asa.Ayers@Gmail.com>
+2010-08-23  Asa Ayers  <Asa.Ayers@Gmail.com>
+
+- Ticket 32 - Based on the patch from lrdx, I have chaned ItemAuditor to depend on DataStore directly instead of going through Altoholic.
+
+2010-08-20  Asa Ayers  <Asa.Ayers@Gmail.com>
 
 - Ticket 31 - Fixed an error in the 'You just made a profit of ...' message
 
